@@ -107,8 +107,6 @@
   </dependencies>
 
   <properties>
-    <!-- Needed for SSL tests as these use the SelfSignedCertificate --> 
-    <argLine.java9.extras>--add-exports java.base/sun.security.x509=ALL-UNNAMED</argLine.java9.extras>
     <skipJapicmp>true</skipJapicmp>
   </properties>
 
